# Homework3

./: README.md
records_folder/: Screencast from 2024-12-05 23-06-32.webm
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py  iiwa.launch_aruco.py  iiwa.launch_effort.py
ros2_iiwa/iiwa_description/: CMakeLists.txt  package.xml
ros2_iiwa/iiwa_description/config/: base_frame.yaml  iiwa.config.xacro  iiwa_controllers.yaml  initial_positions.yaml
ros2_iiwa/iiwa_description/env-hooks/: iiwa_description.sh.in
ros2_iiwa/iiwa_description/gazebo/: camera.urdf.xacro
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa/iiwa_description/gazebo/models/spherical_object/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: empty.world  empty_spherical.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/include/: kdl_planner.h  kdl_robot.h  utils.h
ros2_kdl_package/src/: kdl_control.cpp  kdl_planner.cpp  kdl_robot.cpp  ros2_kdl_node.cpp  ros2_kdl_vision_control.cpp  ros2_kdl_vision_dynamic.cpp
